demos/30-l7-rules/policies/cnp-shop-l7.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: shop-backend
  namespace: cf2cnp-lab30
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: cf2cnp
    app.kubernetes.io/name: shop
spec:
  description: Allow ingress traffic from cf2cnp-lab30 to cf2cnp-lab30 for the shop
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: backend
      app.kubernetes.io/name: shop
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: frontend
            app.kubernetes.io/name: shop
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: ^/api/orders(\?.*)?$
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: shop-frontend
  namespace: cf2cnp-lab30
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/managed-by: cf2cnp
    app.kubernetes.io/name: shop
spec:
  description: Allow ingress traffic from cf2cnp-lab30 to cf2cnp-lab30 for the shop
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: frontend
      app.kubernetes.io/name: shop
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: pos
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: ^/(\?.*)?$
              - method: GET
                path: ^/checkout(\?.*)?$
